# darknet-ndkpatch

./: CMakeLists.txt  NDK_all.sh  darknet-vs.code-workspace  ndk_build.sh
jni/: darknetlib.c
